# anySCP

./: AGENTS.md  LICENSE  Makefile  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/agents/: architecture.md  security.md  workflows.md
src/: theme.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  migration.rs  telemetry.rs
src-tauri/src/db/: mod.rs
src-tauri/src/r2/: mod.rs
src-tauri/src/s3/: commands.rs  mod.rs
src-tauri/src/sftp/: commands.rs  transfer_manager.rs
src-tauri/src/ssh/: handler.rs  keys.rs  manager.rs
src-tauri/src/vault/: mod.rs
src/components/dashboard/: HostsDashboard.tsx
src/components/explorer/: ExplorerFileTable.tsx
src/components/layout/: AppShell.tsx  UnifiedTabBar.tsx
src/components/r2/: R2Page.tsx  index.ts
src/components/s3/: S3ConnectDialog.tsx  S3Page.tsx
src/components/settings/: SettingsPage.tsx
src/components/sftp/: SftpBrowser.tsx
src/components/sidebar/: Sidebar.tsx
src/stores/: tab-store.ts
src/types/: index.ts  r2.ts  s3.ts
