[package]
name = "retoom"
version = "0.0.0-dev"
description = "Remote tools for macOS"
authors = ["Retoom contributors"]
license = "MIT"
repository = "https://github.com/teotll/Retoom"
homepage = "https://github.com/teotll/Retoom"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "retoom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SSH (pure Rust, async)
russh = "0.46"
russh-keys = "0.46"
async-trait = "0.1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"

# Unique session IDs
uuid = { version = "1", features = ["v4"] }

# Concurrent session map
dashmap = "6"

# SQLite persistence
rusqlite = { version = "0.31", features = ["bundled"] }

# File watching (for edit-in-vscode re-upload on save)
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }

# SFTP
russh-sftp = "2.1"

# HTTP client for Cloudflare R2 management API calls
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Cancellation tokens for in-flight transfers
tokio-util = { version = "0.7" }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OS credential store (macOS Keychain, Windows DPAPI, Linux libsecret/kwallet)
keyring = { version = "3", features = ["apple-native", "linux-native", "windows-native"] }
tauri-plugin-dialog = "2.6.0"
ssh2-config = "0.7.0"
rust-s3 = { version = "0.37.1", default-features = false, features = ["tokio-rustls-tls"] }


[dev-dependencies]
tempfile = "3"
